hetz/umami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: nginx-static
spec:
  type: ClusterIP
  selector:
    app: umami
  ports:
    - name: umami
      protocol: TCP
      port: 3000
      targetPort: umami
